--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 12:03:09 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" aria-current="page" class="nav3_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -273,7 +273,7 @@ margin: 0rem !important;
               <div class="container-large">
                 <h2>Apie &quot;KUN/U&quot;</h2>
                 <div class="padding-bottom padding-small"></div>
-                <p>KUN/U Studija kviečia, kur visus norinčius mokytis klasikinio ir šiuolaikinio šokio. Eglės Ukanytės (studijos įkūrėjos vizija:  Esu įsitikinusi, kad labai svarbu sudėti tvirtus šokio pagrindus vaikystėje, todėl kartu su tarptautinę patirtį sukaupusių šokio mokytojų komanda siekiame įkvėpti vaikus kurti ir pamilti šokį. <br><br>Šokio studijos misija, įkvėpti žengti didesnius žingsnius scenos menuose, nuolat tobulėti ir su meilė šokti bei kurti. Studijoje vyksta ir „Kun/u“ šokio teatro trupės repeticijos, seminarai su patyrusiais mokytojais. Stengsiuosi išlaikyti studiją atvirą visiems, mylintiems šokį“.</p>
+                <p>KUN/U Studija kviečia, kur visus norinčius mokytis klasikinio ir šiuolaikinio šokio. Eglės Ukanytės (studijos įkūrėjos vizija:  „Esu įsitikinusi, kad labai svarbu sudėti tvirtus šokio pagrindus vaikystėje, todėl kartu su tarptautinę patirtį sukaupusių šokio mokytojų komanda siekiame įkvėpti vaikus kurti ir pamilti šokį. <br><br>Šokio studijos misija, įkvėpti žengti didesnius žingsnius scenos menuose. Studijoje vyksta ir „Kun/u“ šokio teatro trupės repeticijos, seminarai su patyrusiais mokytojais. Stengsiuosi išlaikyti studiją atvirą visiems, mylintiems šokį“.</p>
                 <div class="padding-bottom padding-medium"></div>
               </div>
             </div>
@@ -297,7 +297,7 @@ margin: 0rem !important;
                 <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3a7-c1325447" class="layout3_content">
                   <h2 class="heading-style-h3">Šokio Studijos Nuoma</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Pilnai įrengta šokių studija su profesionalia šokių danga, garso sistema, veidrodžiais, persirengimo zona. Puikiai tinka repeticijoms ir kitiem renginiam. </p>
+                  <p class="paragraph">Pilnai įrengta šokių studija su profesionalia šokių danga, garso sistema, veidrodžiais, persirengimo zona. Puikiai tinka repeticijoms ir kitiems renginiam. </p>
                   <div class="button-wrapper">
                     <a href="sokiu-studijos-nuoma-vilniuje.html" class="button w-button">Studijos Nuoma</a>
                   </div>
@@ -306,7 +306,7 @@ margin: 0rem !important;
                 <div id="w-node-_36204aaf-5734-1541-e6d3-3c25c2fbc3b0-c1325447" class="layout3_content">
                   <h2 class="heading-style-h3">Choreografijos Kūrimas</h2>
                   <div class="padding-bottom padding-small"></div>
-                  <p class="paragraph">Dirbkite su profesionalia choreografe susikurti judesio kūrinį skirta tik Jums. Turime parities dirbant su muzikantais, teatro ir kitais atlikėjais. </p>
+                  <p class="paragraph">Galime sukurti Jums tinkamą šokio kūrinį ar choreografiją. Turime ilgametę patirtį dirbant su muzikantais, teatro ir kitais meno atlikėjais. </p>
                   <div class="button-wrapper">
                     <a href="privacios-sokio-pamokos-ir-choreografija.html" class="button w-button">Choreografijos Kūrimas</a>
                   </div>
@@ -326,17 +326,17 @@ margin: 0rem !important;
               <div class="team4_component">
                 <div class="team4_list">
                   <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
                     <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
                     <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
@@ -356,7 +356,7 @@ margin: 0rem !important;
               <div class="contact2_component">
                 <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a296-eb21a26f" class="contact2_details-wrapper">
                   <h2>Kontaktai</h2>
-                  <div>Galite susisiekti tiesiogiai arba užpilde formą</div>
+                  <div>Galite susisiekti tiesiogiai arba užpildę formą</div>
                   <div class="padding-bottom padding-medium"></div>
                   <div class="text-weight-bold">Per Instagram</div>
                   <div class="padding-bottom padding-xsmall"></div>
@@ -368,7 +368,7 @@ margin: 0rem !important;
                     </a>
                   </div>
                   <div class="padding-bottom padding-medium"></div>
-                  <div class="text-weight-bold">Telefonas</div>
+                  <div class="text-weight-bold">Telefonu</div>
                   <div class="padding-bottom padding-xsmall"></div>
                   <div>(0-628) 19 320</div>
                   <div class="padding-bottom padding-medium"></div>
@@ -424,7 +424,7 @@ margin: 0rem !important;
             <div class="footer1_top">
               <div class="footer1_content-left">
                 <div id="w-node-feaa94f5-a96d-9665-4cd3-bf17b483a4c3-67c79560" class="div-block-2">
-                  <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
+                  <div id="w-node-_664c0f4a-47d6-b554-9de9-a7b2adea4727-67c79560" class="image_wrapper_footer"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="250px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt=""></div>
                   <div class="footer1_bottom">
                     <div class="text-size-small">© Kunu Studio</div>
                     <div class="footer1_social">
