--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a5f0bafe22a243c3fd126" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -256,7 +256,7 @@ margin: 0rem !important;
               <div class="contact2_component">
                 <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a296-eb21a26f" class="contact2_details-wrapper">
                   <h2>Kontaktai</h2>
-                  <div>Galite susisiekti tiesiogiai arba užpilde formą</div>
+                  <div>Galite susisiekti tiesiogiai arba užpildę formą</div>
                   <div class="padding-bottom padding-medium"></div>
                   <div class="text-weight-bold">Per Instagram</div>
                   <div class="padding-bottom padding-xsmall"></div>
@@ -268,7 +268,7 @@ margin: 0rem !important;
                     </a>
                   </div>
                   <div class="padding-bottom padding-medium"></div>
-                  <div class="text-weight-bold">Telefonas</div>
+                  <div class="text-weight-bold">Telefonu</div>
                   <div class="padding-bottom padding-xsmall"></div>
                   <div>(0-628) 19 320</div>
                   <div class="padding-bottom padding-medium"></div>
@@ -318,7 +318,7 @@ margin: 0rem !important;
         <div class="padding-global">
           <div class="container-large">
             <div class="padding-section-large">
-              <div class="layout2_component">
+              <div class="location_componet">
                 <div class="layout2_lokacja">
                   <h2>Kaip mus rasti?</h2>
                   <div class="padding-bottom padding-small"></div>
@@ -327,8 +327,8 @@ margin: 0rem !important;
                   </p>
                   <div class="padding-bottom padding-medium"></div>
                 </div>
-                <div id="w-node-bbb01085-0eec-dbc8-e361-cd23d95b615d-d95b6147" class="layout2_lokacja">
-                  <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <div id="w-node-bbb01085-0eec-dbc8-e361-cd23d95b615d-d95b6147" class="map_embed">
+                  <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                 </div>
               </div>
             </div>
