--- a/privacios-sokio-pamokos-ir-choreografija.html
+++ b/privacios-sokio-pamokos-ir-choreografija.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="670ff3dacf4d4bc10f99296c" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -288,6 +288,20 @@ margin: 0rem !important;
           </div>
         </div>
       </section>
+      <section class="section_ctabox">
+        <div class="padding-global">
+          <div class="container-medium">
+            <div class="padding-section-large">
+              <div class="layout13_component">
+                <div class="layout13_content-wrapper">
+                  <h2>Norite tapti mūsų studijos nariu?</h2>
+                </div>
+                <a href="tvarkarastis.html" class="button w-button">Tvarkaraštis ir Registracija</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section_komanda">
         <div class="padding-global">
           <div class="container-large">
@@ -297,17 +311,17 @@ margin: 0rem !important;
               <div class="team4_component">
                 <div class="team4_list">
                   <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-18.33.20-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="Egle Ukanyte" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
                     <div class="text-size-medium">Studijos Įkūrėja, Choreografė ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937ca-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="Egle Kraujale" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
                     <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
                   </div>
                   <div id="w-node-a58612d7-61d4-e9bf-6fe8-94ffbf1937d1-bf1937ba" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 22vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="Jovita" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
@@ -327,7 +341,7 @@ margin: 0rem !important;
               <div class="contact2_component">
                 <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a296-eb21a26f" class="contact2_details-wrapper">
                   <h2>Kontaktai</h2>
-                  <div>Galite susisiekti tiesiogiai arba užpilde formą</div>
+                  <div>Galite susisiekti tiesiogiai arba užpildę formą</div>
                   <div class="padding-bottom padding-medium"></div>
                   <div class="text-weight-bold">Per Instagram</div>
                   <div class="padding-bottom padding-xsmall"></div>
@@ -339,7 +353,7 @@ margin: 0rem !important;
                     </a>
                   </div>
                   <div class="padding-bottom padding-medium"></div>
-                  <div class="text-weight-bold">Telefonas</div>
+                  <div class="text-weight-bold">Telefonu</div>
                   <div class="padding-bottom padding-xsmall"></div>
                   <div>(0-628) 19 320</div>
                   <div class="padding-bottom padding-medium"></div>
