--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a37b3a85fd1ae1e07c883" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -208,7 +208,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -283,7 +283,7 @@ margin: 0rem !important;
                   </div>
                 </div>
                 <div class="pricing1_plan is-highlighted">
-                  <div>Pilną Narystė</div>
+                  <div>Pilna Narystė</div>
                   <div class="margin-vertical margin-xsmall">
                     <div class="text-size-xxlarge text-weight-bold">55€<span class="text-size-large text-weight-semibold text-style-muted">/per mėnesį</span></div>
                   </div>
@@ -408,7 +408,7 @@ margin: 0rem !important;
                       <div class="pricing1_feature_icon w-embed"><svg height="100%" viewbox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M19.0303 0.71967C19.3232 1.01256 19.3232 1.48744 19.0303 1.78033L7.53033 13.2803C7.38764 13.423 7.19346 13.5022 6.99167 13.5C6.78988 13.4977 6.59751 13.4142 6.45802 13.2684L0.95802 7.51842C0.671706 7.21909 0.682256 6.74433 0.981584 6.45802C1.28091 6.1717 1.75567 6.18225 2.04198 6.48158L7.01192 11.6774L17.9697 0.71967C18.2626 0.426777 18.7374 0.426777 19.0303 0.71967Z" fill="currentcolor"></path>
                         </svg></div>
-                      <div class="text-size-small text-weight-semibold">Vienam arba dviem asmenim.</div>
+                      <div class="text-size-small text-weight-semibold">Vienam arba dviems asmenim.</div>
                     </div>
                     <div class="pricing1_feature">
                       <div class="pricing1_feature_icon w-embed"><svg height="100%" viewbox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -428,7 +428,7 @@ margin: 0rem !important;
           <div class="container-small">
             <div class="padding-section-large">
               <div class="text-align-center">
-                <h3>Privačios Pamokos ir Choreografija.</h3>
+                <h3>Privačios Pamokos ir Choreografija</h3>
                 <div class="padding-bottom padding-small"></div>
                 <div class="padding-bottom padding-medium">
                   <p>Dirbame su vaikais, suaugusiais bei atlikėjais. Dėl privačių šokių pamokų registracijos, prašom susisiekti.</p>
