--- a/tvarkarastis.html
+++ b/tvarkarastis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Oct 27 2024 09:16:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="671a182780c059ebb289fa2d" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -210,7 +210,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-out" role="banner" class="nav3_component w-nav">
       <div class="nav3_container">
-        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 16vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
+        <a href="index.html" class="nav3_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 67vw, (max-width: 991px) 260.84375px, 20vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav3_logo"></a>
         <nav role="navigation" class="nav3_menu w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav3_dropdown w-dropdown">
             <div class="nav3_dropdown_toggle w-dropdown-toggle">
@@ -256,7 +256,7 @@ margin: 0rem !important;
               <div class="text-align-center">
                 <h1>Kun/u Studio Tvarkaraštis</h1>
                 <div class="padding-bottom padding-small"></div>
-                <div><img src="images/Screenshot-2024-10-24-at-19.55.30.jpg" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-10-24-at-19.55.30-p-500.jpg 500w, images/Screenshot-2024-10-24-at-19.55.30.jpg 754w" alt="Kunu Studio Tvarkarastis"></div>
+                <div><img src="images/Screenshot-2024-10-24-at-19.55.30.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 90vw, 754px" srcset="images/Screenshot-2024-10-24-at-19.55.30-p-500.jpg 500w, images/Screenshot-2024-10-24-at-19.55.30.jpg 754w" alt="Kunu Studio Tvarkarastis"></div>
               </div>
             </div>
             <div class="div-block">
@@ -286,7 +286,7 @@ margin: 0rem !important;
               <div class="contact2_component">
                 <div id="w-node-ca1f792b-a5d4-d265-6cb1-5636eb21a296-eb21a26f" class="contact2_details-wrapper">
                   <h2>Kontaktai</h2>
-                  <div>Galite susisiekti tiesiogiai arba užpilde formą</div>
+                  <div>Galite susisiekti tiesiogiai arba užpildę formą</div>
                   <div class="padding-bottom padding-medium"></div>
                   <div class="text-weight-bold">Per Instagram</div>
                   <div class="padding-bottom padding-xsmall"></div>
@@ -298,7 +298,7 @@ margin: 0rem !important;
                     </a>
                   </div>
                   <div class="padding-bottom padding-medium"></div>
-                  <div class="text-weight-bold">Telefonas</div>
+                  <div class="text-weight-bold">Telefonu</div>
                   <div class="padding-bottom padding-xsmall"></div>
                   <div>(0-628) 19 320</div>
                   <div class="padding-bottom padding-medium"></div>
