--- a/sokiu-studijos-nuoma-vilniuje.html
+++ b/sokiu-studijos-nuoma-vilniuje.html
@@ -7,7 +7,7 @@
   <meta content="Šokiu Studijos Nuoma Vilniuje" property="og:title">
   <meta content="Reikia erdvės repeticijoms ar renginiams? Nuomokite šokio studiją Vilniuje, pritaikytą šokėjų, choreografų ir menininkų poreikiams." property="og:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
-  <meta content="Šokiu Studijos Nuoma Vilniuje" property="twitter:title">
+  <meta content="Šokių Studijos Nuoma Vilniuje" property="twitter:title">
   <meta content="Reikia erdvės repeticijoms ar renginiams? Nuomokite šokio studiją Vilniuje, pritaikytą šokėjų, choreografų ir menininkų poreikiams." property="twitter:description">
   <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
